# sellibuy

./: .gitignore  README.md  docker-compose.yml
.github/workflows/: backend-ci.yml
backend/: .dockerignore  .env.example  .importlinter  Dockerfile  README.md  alembic.ini  docker-compose.yml  main.py  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 42c5f0ad6aed_create_database_schemas.py  f431bf170217_create_auth_tables.py  fad9c3e1fc75_create_postgres_extensions.py
backend/auth/: models.py
backend/core/: config.py  database.py  exceptions.py  redis.py  security.py
backend/shared/db/: base.py  mixins.py
backend/tests/: test_health.py
docs/: SelliBuy Business Discovery Questionnaire (1).docx  SelliBuy Business Discovery Questionnaire.docx  Sellibuy_Concept_Note.docx
